--- a/HR/HR-ejb/nbproject/private/private.properties
+++ b/HR/HR-ejb/nbproject/private/private.properties
@@ -1,7 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\alexa\\AppData\\Roaming\\NetBeans\\8.1\\config\\GlassFishEE6\\Properties\\gfv3-1478693739.properties
+deploy.ant.properties.file=C:\\Users\\Mihaela\\AppData\\Roaming\\NetBeans\\dev\\config\\GlassFishEE6\\Properties\\gfv3-283029779.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/alexa/AppData/Roaming/NetBeans/8.1/config/GF_4.1.1/domain1
+j2ee.server.domain=C:/Users/Mihaela/AppData/Roaming/NetBeans/dev/config/GF_4.1.1/domain1
 j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
 j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
 j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
-netbeans.user=C:\\Users\\alexa\\AppData\\Roaming\\NetBeans\\8.1
+netbeans.user=C:\\Users\\Mihaela\\AppData\\Roaming\\NetBeans\\dev
+user.properties.file=C:\\Users\\Mihaela\\AppData\\Roaming\\NetBeans\\dev\\build.properties
