--- a/HR/HR-war/web/WEB-INF/web.xml
+++ b/HR/HR-war/web/WEB-INF/web.xml
@@ -13,47 +13,20 @@
             30
         </session-timeout>
     </session-config>
-    <login-config>
-        <auth-method>FORM</auth-method>
-        <realm-name>JDBCRealm</realm-name>
-        <form-login-config>
-            <form-login-page>/index.jsp</form-login-page>
-            <form-error-page>/WEB-INF/pages/error.jsp</form-error-page>
-        </form-login-config>
-    </login-config>
-    <!--security-constraint>
-        <display-name>Positions Pages</display-name>
+
+    <security-constraint>
+        <display-name>Constraint1</display-name>
         <web-resource-collection>
-            <web-resource-name>Protected Area</web-resource-name>
-            <description></description>
+            <web-resource-name>POSITIONS</web-resource-name>
+            <description/>
             <url-pattern>/positions</url-pattern>
             <http-method>GET</http-method>
             <http-method>POST</http-method>
-            <http-method>HEAD</http-method>
-            <http-method>PUT</http-method>
-            <http-method>OPTIONS</http-method>
-            <http-method>TRACE</http-method>
-            <http-method>DELETE</http-method>
         </web-resource-collection>
         <auth-constraint>
             <description/>
             <role-name>DIRECTOR</role-name>
         </auth-constraint>
-        <user-data-constraint>
-            <transport-guarantee>NONE</transport-guarantee>
-        </user-data-constraint>
-    </security-constraint-->
-    <security-constraint>
-        <display-name>All Access</display-name>
-        <web-resource-collection>
-            <web-resource-name>None Protected User Area</web-resource-name>
-            <description/>
-            <url-pattern>/login</url-pattern>
-            <http-method>GET</http-method>
-            <http-method>POST</http-method>
-        </web-resource-collection>
-        <user-data-constraint>
-            <transport-guarantee>NONE</transport-guarantee>
-        </user-data-constraint>
     </security-constraint>
+
 </web-app>
