More security Constraints

--- a/HR/HR-war/web/WEB-INF/web.xml
+++ b/HR/HR-war/web/WEB-INF/web.xml
@@ -25,7 +25,7 @@
         </web-resource-collection>
         <auth-constraint>
             <description/>
-            <role-name>DIRECTOR</role-name>
+            <role-name>ADMINISTRATOR</role-name>
         </auth-constraint>
     </security-constraint>
 
