--- a/HR/HR-war/web/WEB-INF/web.xml
+++ b/HR/HR-war/web/WEB-INF/web.xml
@@ -7,12 +7,13 @@
         </session-timeout>
     </session-config>
 
-<!--    <security-constraint>
+    <security-constraint>
         <display-name>ADMIN Constraint</display-name>
         <web-resource-collection>
             <web-resource-name>ADMIN Constraint</web-resource-name>
             <description/>
-            <url-pattern>/admin/add-user</url-pattern>
+            <url-pattern>/admin/users-list</url-pattern>
+            <url-pattern>/admin/delete-user</url-pattern>
             <http-method>GET</http-method>
             <http-method>POST</http-method>
         </web-resource-collection>
@@ -20,7 +21,7 @@
             <description/>
             <role-name>ADMINISTRATOR</role-name>
         </auth-constraint>
-    </security-constraint>-->
+    </security-constraint>
 
 
     <security-constraint>
